[package]
name = "overpass_parser_ruby"
version = "0.1.0"
edition = "2021"
authors = ["Frédéric Rodrigo <fred.rodrigo@gmail.com>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "0.6.2" }
overpass_parser_rust = { git = "https://github.com/teritorio/overpass_parser_rust", branch = "master" }
